[package]
name = "hookspammer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.6", features = ["derive"] }
color-eyre = "0.6.1"
crypto = { version = "0.3.0" }
dotenv = "0.15.0"
fake = { version = "2.4.3", features = ["derive", "chrono"] }
futures = "0.3.21"
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.11.9", features = ["default-tls", "json"] }
ring = "0.16.20"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.2"
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.31"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tracing-tree = "0.2.0"

[profile.release]
debug = 1
